Tue Dec 23 21:01:12 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/richcomm_usb: rewritten driver formerly known as lakeview_usb

Tue Dec 23 14:53:05 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/powerpanel: functionality added/changed
   - text mode driver supports setting 'ondelay' and 'offdelay' (to allow
     delayed shutdown and start)
   - upsdrv_shutdown() function falls back from 'shutdown.return' to
     'shutdown.stayoff' and 'shutdown.reboot' (depending on line state)
     which is needed for older text mode protocol units that can't do this
     by themselves
   - renamed 'test.failure.start' and 'test.failure.stop' to
     'test.battery.start.quick' and 'test.battery.stop' respectively
  * man/powerpanel.8: manual page updated to reflect the above changes

Mon Dec 22 21:23:23 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list: complete compatibility information from OpenUPSmart
   (http://openupsmart.sourceforge.net) since these are all supported by the
   megatec driver (Centralion rebranded units)

Fri Dec 19 17:30:14 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd: Shed clients after one minute of inactivity, to prevent that
   stalled clients keep resources occupied.

Thu Dec 18 20:15:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * introduce the upsdrv_info_t structure: this is a structure containing all the
   common driver information, like name, version, author(s) and development
   status (patch provided by Arnaud Quette).
   - main.ch: declare the upsdrv_info_t structure and a generic upsdrv_banner
     function to print the banner information.
   - drivers/*: create and fill the upsdrv_info_t entry and remove the
     upsdrv_banner function. Bump the release version. Remove header files that
     only contain the driver version (this information is now available through
     upsdrv_info_t upsdrv_info that is filled in every driver)